# github-team-template

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs-update.yml
docs/: ARCHITECTURE.md
scripts/: check_readme_sections.py  check_template_markers.py  init_project.py  setup-branch-protection.sh  setup-derived-repo.sh  update_docs.py
tests/: test_smoke.py
tests/scripts/: test_check_readme_sections.py  test_check_template_markers.py  test_init_project.py  test_setup_derived_repo.py  test_update_docs.py
